--- a/h5test/css/index.css
+++ b/h5test/css/index.css
@@ -1,15 +1,13 @@
 html{ font-size: 3.33333vw;}
 
-@media (max-width: 320px) {
+@media (max-width: 350px) {
   body {
     /* background-image: url("../img/background.jpg");
     background-repeat: no-repeat;
     min-width: 350px; */
-    /* background-size: 330px auto!important; 设置背景图片的最小宽度为600像素，高度自适应 */
+    background-size: 370px auto!important; /* 设置背景图片的最小宽度为600像素，高度自适应 */
   }
-  .container {
-    margin-top: 50rem!important;
-  }
+  html{ font-size: 3.33333vw;}
 }
 
 @media (min-width: 800px) {        
@@ -20,14 +18,14 @@ html{ font-size: 3.33333vw;}
 
 @media (min-width: 1200px) {       
   html {                          
-    font-size: 45.6px;                
+    font-size: 57.6px;                
   }                                
 }   
 body {
   background-image: url("../img/background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
-  /* min-width: 320px; */
+  min-width: 350px;
 }
 
 .container {
@@ -88,20 +86,17 @@ body {
 }
 .img-name{
   text-align: center; /*设置文本水平居中*/
-  /* padding: 0px 1rem; */
+  padding: 0px 20px;
   width: 70%;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scale(0.8);
   bottom: 16%;
   color: #e8ffbc;
-  font-size: 0.7rem;
 }
 .conditions{
   color: #e8ffbc;
   text-align: center;
   margin-bottom: 1vh;
-  font-size: 0.8rem;
+  font-size: 30%;
 }
 .get img {
   width: 100%;
@@ -121,7 +116,7 @@ body {
   justify-content: space-around;
   align-items: center;
   color: #dffbab;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   margin-bottom: 1.5rem;
 }
 .now{
