--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@ body {
   width: 70%;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%) scale(0.8);
+  transform: translateX(-50%);
   bottom: 16%;
   color: #e8ffbc;
   font-size: 0.7rem;
